--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.flexifleet">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,15 +13,18 @@
         android:theme="@style/AppTheme">
 
 
-        <activity android:name=".OrderFood"></activity>
-        <activity android:name=".HomeScreen"></activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".Activities.OrderFood"></activity>
+        <activity android:name=".Activities.HomeScreen"></activity>
+        <activity android:name=".Activities.LoginActivity">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
 
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
+        <service android:name=".Services.CountingService"/>
     </application>
 
 </manifest>
+
+
